codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_rename_prefilled_prompt.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: popup
---
   gpt-5.5 default │  /tmp/project │ API key
▌ Rename thread
▌
▌ Current project title

Press enter to confirm or esc to go back
